--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    Hello World! este é o meu primeiro site!
+    Hello World! este é o meu primeiro site!.<br> 
     <img src="pessoas.jpg" alt=""width="360px">
 </body>
 </html>
