--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    Hello World! este é o meu primeiro site!.<br> 
+    <p>Hello World! este é o meu primeiro site!.<p> 
+
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Possimus, voluptatum, iusto delectus harum adipisci expedita, minus debitis consectetur aliquid quam nisi? Dolorem harum, nemo a est officiis doloribus corrupti animi.</p>
     <img src="pessoas.jpg" alt=""width="360px">
 </body>
 </html>
