UPADATE index.html V2

--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p>Hello World! este é o meu primeiro site!.<p> 
+    <p>Hello World! este é o meu primeiro site para a web!.<p> 
 
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Possimus, voluptatum, iusto delectus harum adipisci expedita, minus debitis consectetur aliquid quam nisi? Dolorem harum, nemo a est officiis doloribus corrupti animi.</p>
+    <p>Lorem ipsum dolor sit amet consectetur,
+     adipisicing elit. Possimus, voluptatum, iusto 
+     delectus harum adipisci expedita, minus debitis
+    consectetur aliquid quam nisi? Dolorem harum, 
+    nemo a est officiis doloribus corrupti animi.</p>
     <img src="pessoas.jpg" alt=""width="360px">
 </body>
 </html>
